# rag-pipeline

./: .gitignore  README.md  pyproject.toml  test_latency.py  test_query.py
src/rag_pipeline/: __init__.py
src/rag_pipeline/cli/: __init__.py  benchmark.py  ingest.py  query.py
src/rag_pipeline/config/: settings.py
src/rag_pipeline/ingestion/: __init__.py  data_processor.py  embedder.py  pipeline.py  s3_vectors_client.py
src/rag_pipeline/utils/: logger.py
