[project]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG pipeline for custom dataset: ingestion -> retrieval -> generation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.63",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.2",
]

[project.scripts]
ingest = "rag_pipeline.cli.ingest:main"
query = "rag_pipeline.cli.query:main"
benchmark = "rag_pipeline.cli.benchmark:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "boto3-stubs>=1.40.63",
    "mypy>=1.18.2",
    "ruff>=0.14.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
